--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <script type="module" src="./lesson-01/module_1-2.js"></script>
+    <script type="module" src="./lesson-02/module_3-4.js"></script>
   </body>
 </html>
