--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <script type="module" src="./lesson-01/module_1-2.js"></script>
-    <script type="module" src="./lesson-02/module_3-4.js"></script>
+    <!-- <script type="module" src="./lesson-01/module_1-2.js"></script>
+    <script type="module" src="./lesson-02/module_3-4.js"></script> -->
+    <script type="module" src="./lesson-03/module_5-6.js"></script>
   </body>
 </html>
