--- a/lesson-04/module7.html
+++ b/lesson-04/module7.html
@@ -1,48 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/main.css">
-</head>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
 
-<body>
+  <body>
     <h1 id="title">Базові операції з DOM</h1>
     <ul class="list">
-        <li data-topic="navigation">
-            <h3>Навігація по DOM</h3>
-            <p>
-                Доступ до DOM починається з об'єкта document, з нього можна дістатися до
-                будь-яких елементів.
-            </p>
-        </li>
-        <li data-topic="search">
-            <h3>Пошук елементів</h3>
-            <p>
-                Група методів elem.querySelector* - це сучасний стандарт для пошуку
-                елементів.
-            </p>
-        </li>
-        <li data-topic="props">
-            <h3 class="completed">Властивості та атрибути</h3>
-            <p>
-                elem.textContent, elem.classList, elem.style, elem.hasAttribute(name),
-                elem.getAttribute(name), elem.setAttribute(name, value),
-                elem.removeAttribute(name)
-            </p>
-        </li>
-        <li data-topic="manipulation">
-            <h3>Створення та видалення елементів</h3>
-            <p>
-                DOM API дозволяє не тільки вибирати або змінювати вже існуючі, але й
-                видаляти, а також створювати нові елементи, після чого додавати їх в
-                документ.
-            </p>
-        </li>
+      <li data-topic="navigation">
+        <h3>Навігація по DOM</h3>
+        <p>
+          Доступ до DOM починається з об'єкта document, з нього можна дістатися
+          до будь-яких елементів.
+        </p>
+      </li>
+      <li data-topic="search">
+        <h3>Пошук елементів</h3>
+        <p>
+          Група методів elem.querySelector* - це сучасний стандарт для пошуку
+          елементів.
+        </p>
+      </li>
+      <li data-topic="props">
+        <h3 class="completed">Властивості та атрибути</h3>
+        <p>
+          elem.textContent, elem.classList, elem.style, elem.hasAttribute(name),
+          elem.getAttribute(name), elem.setAttribute(name, value),
+          elem.removeAttribute(name)
+        </p>
+      </li>
+      <li data-topic="manipulation">
+        <h3>Створення та видалення елементів</h3>
+        <p>
+          DOM API дозволяє не тільки вибирати або змінювати вже існуючі, але й
+          видаляти, а також створювати нові елементи, після чого додавати їх в
+          документ.
+        </p>
+      </li>
     </ul>
-    <script type="module" src="./js/module7.js"></script>
-</body>
 
+    <form class="contact-form js-contact-form">
+      <input
+        name="userName"
+        type="text"
+        class="contact-form-input js-username-input"
+        data-length="8"
+        required
+        placeholder="Your name"
+      />
+      <label class="js-policy-label">
+        <input
+          type="checkbox"
+          name="accept"
+          class="contact-form-checkbox js-policy-checkbox"
+        />
+        Я <span class="js-username-output">Anonymous</span> погоджуюсь із
+        політикою конфіденційності
+      </label>
+      <button type="submit" class="contact-form-btn js-contact-form-submit">
+        Відправити
+      </button>
+    </form>
+    <script type="module" src="./js/module7.js"></script>
+  </body>
 </html>
